# sgn-guard

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: compare_guard_vs_noguard.py  plot_compare.py  simple_game.py
src/sgn_guard/: __init__.py  estimators.py  guard.py  metrics.py
src/sgn_guard/adapters/: __init__.py  prime_rl.py
tests/: conftest.py  test_behavior.py  test_guard.py
