[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sgn-guard"
version = "0.1.0"
description = "Stability-first LR guard for decentralized training (heuristics-based, non-novel)."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Vedansh Sharma"}
]
license = {text = "MIT"}
dependencies = [
  "torch>=2.1",
  "numpy>=1.24"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "matplotlib>=3.7",
  "mypy>=1.8",
  "ruff>=0.4"
]

[project.urls]
Homepage = "https://github.com/"
Issues = "https://github.com/"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["sgn_guard*"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
disallow_untyped_defs = false
warn_return_any = false
warn_unused_ignores = true
